# cards-ocr

./: pyproject.toml
src/: cards.py
